--- a/experience.qmd
+++ b/experience.qmd
@@ -9,7 +9,7 @@ toc: false
 
 ![](NBA_FAS.jpeg){height=2in}
 
-I got accepted into the FAS program after going through 2 rounds of interviews, one of them included building a statistical model predicting an NBA player's 3 point percentage. In the program, 42 other stars along with myself engage in bi-weekly sessions where we gain skills in R, SQL, and Python and do statistical analysis on NBA data. On top of that, we listen to NBA analysts give insight on analytics in the NBA in various Q&A sessions. At the end of the program, we will complete a capstone project for the program.
+I got accepted into the FAS program after going through 2 rounds of interviews, one of them included building a statistical model predicting an NBA player's 3 point percentage. In the program, 42 other stars along with myself engage in bi-weekly sessions where we gain skills in R, SQL, and Python and do statistical analysis on NBA data. On top of that, we listen to NBA data analysts give insight on analytics in the NBA in various Q&A sessions. At the end of the program, I completed a capstone project where I created a metric using tracking data.
 
 
 #### UCLA Bruin Sports Analytics (BSA)
